Se agrego requisitos al plan de estudios

--- a/client/app/styles/styls/home.styl
+++ b/client/app/styles/styls/home.styl
@@ -11,6 +11,13 @@
     width: 100%
   .ct-login
     border-radius(0)
+  .window-modal-content
   .window-modal-content-sm
     width 100%
     min-width 240px
+
+@media (min-width: 800px)
+  .window-modal-content-sm
+    width 500px
+  .window-modal-content
+    width 800px
